[package]
authors = ["Kristoffer Ström <kristoffer@rymdkoloni.se>"]
description = "Trait abstracting over cryptographic hash-functions"
documentation = "https://krl.github.io/rustdoc/cryptohash/cryptohash/index.html"
repository = "https://github.com/krl/cryptohash"
name = "cryptohash"
version = "0.7.0"
license="MIT OR Apache-2.0"

[dependencies]
blake2-rfc = "0.2.17"
